package seedu.duke;

public class ExpensiveLehException extends RuntimeException {

    public ExpensiveLehException(String message) {
        super(message);
    }
}
