@startuml
skinparam classAttributeIconSize 0

class Parser {
    - scanner : Scanner
    + readCommand() : Command
    - parseAddCommand(line : String) : Command
    - parseEditCommand(line : String) : Command
    - parseBudgetCategoryCommand(line : String) : Command
}

abstract class Command {
    + execute(managers : Managers, ui : UI) : void
}

class AddCommand {
    - itemToAdd : Object
    - type : String
    + AddCommand(expense : Expense, type : String)
    + AddCommand(loan : Loan, type : String)
    + AddCommand(index : int, type : String)
}

class EditCommand {
    - index : int
    - category : String
    - name : String
    - amount : Double
    - date : LocalDate
    + EditCommand(index : int, category : String, name: String, value : Double, date : LocalDate) : void
}

class DeleteCommand {
    - index : int
    - type : String
    + DeleteCommand(index : int, type : String)
    - deleteExpense(expenses : ExpenseManager, ui : UI) : void
    - deleteLoan(loanManager : LoanManager, ui : UI) : void
    - deleteBookmark(bookmark : Bookmark, ui : UI) : void
}

class BudgetCommand {
    - value : double
    + BudgetCommand(value : double) : void
}

class CategoryBudgetCommand {
    - category : String
    - amount : double
    + CategoryBudgetCommand(category : String, amount : double)
}

class ListCommand {
    - listType : String
    + ListCommand(listType : String)
    - listExpenses(expenses : ExpenseManager, ui : UI) : void
    - listLoans(loanManager : LoanManager, ui : UI) : void
    - listBookmarks(bookmark : Bookmark, ui : UI) : void
}

class ListBudgetsCommand {
    - capitalize(str : String) : String
}

class BookmarkCommand {
    - index : int
    + BookmarkCommand(index : int)
}

class SearchCommand {
    - keyword : String
    + SearchCommand(keyword : String)
}

class RankCommand {
    - type : String
    + RankCommand(type : String)
}

class HelpCommand {

}

class ExitCommand {

}

class ExpensiveLehException {
    + ExpensiveLehException(message : String)
}

AddCommand -[hidden]-> EditCommand
EditCommand -[hidden]-> DeleteCommand
DeleteCommand -[hidden]-> BudgetCommand
BudgetCommand -[hidden]-> CategoryBudgetCommand
CategoryBudgetCommand -[hidden]-> ListCommand
ListCommand -[hidden]-> ListBudgetsCommand
ListBudgetsCommand -[hidden]-> BookmarkCommand
BookmarkCommand -[hidden]-> SearchCommand
SearchCommand -[hidden]-> RankCommand
RankCommand -[hidden]-> HelpCommand
HelpCommand -[hidden]-> ExitCommand

' Inheritance
Command <|-- AddCommand
Command <|-- EditCommand
Command <|-- DeleteCommand
Command <|-- BudgetCommand
Command <|-- CategoryBudgetCommand
Command <|-- ListCommand
Command <|-- ListBudgetsCommand
Command <|-- BookmarkCommand
Command <|-- SearchCommand
Command <|-- RankCommand
Command <|-- HelpCommand
Command <|-- ExitCommand

' Relationships
Parser --> Command : creates
Parser --> ExpensiveLehException : throws

Command --> Managers
Command --> UI

AddCommand --> Expense
AddCommand --> Loan

@enduml